<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This file is the part of jsBeans, high-level JavaScript client-server framework.
  ~ The contents of this file are subject to the MIT License (MIT).
  ~ (c) aa@sis.ru, da@sis.ru, Special Information Systems, LLC, 2011-2018
  ~
  ~ Настоящий файл является частью клиент-сервеной JavaScript платформы.
  ~ Условия использования и распространения содержимого данного файла соответствуют программному обеспечению с открытыми исходными кодами и равнозначно MIT License (MIT).
  ~ Авторские права принадлежат aa@sis.ru, da@sis.ru, ООО СИС, 2011-2018гг.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jsbeans</groupId>
    <artifactId>jsbeans</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <name>jsBeans node</name>
    <url>http://jsbeans.org</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/jsbeans/jsbeans/blob/master/LICENSE</url>
        </license>
    </licenses>

    <inceptionYear>2017</inceptionYear>
    <organization>
        <name>SIS, LLC</name>
        <url>http://sis.ru/</url>
    </organization>

    <developers>
        <developer>
            <email>aa@sis.ru</email>
        </developer>
        <developer>
            <email>da@sis.ru</email>
        </developer>
    </developers>

    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>

        <org.jsbeans.version>1.0-SNAPSHOT</org.jsbeans.version>

        <!-- org.jsbeans.system.path - define system js-beans location in jar -->
        <org.jsbeans.system.path>jsb-system</org.jsbeans.system.path>

        <!-- org.jsbeans.resource.path - define system js-beans location in jar -->
        <org.jsbeans.resource.path>jsb-resource</org.jsbeans.resource.path>

        <!-- org.jsbeans.system.path - define application js-beans location in jar and result build directory (look builds/**/assembly.xml)-->
        <org.jsbeans.application.path>jsb-application</org.jsbeans.application.path>
    </properties>

    <modules>
        <module>utils</module>
        <module>kernel</module>
        <module>plugins</module>
        <module>enviroment</module>
        <module>builds</module>
    </modules>


    <dependencyManagement>

    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/jsb-system</directory>
                <targetPath>${org.jsbeans.system.path}</targetPath>
            </resource>
            <resource>
                <directory>src/main/jsb-resource</directory>
                <targetPath>${org.jsbeans.resource.path}</targetPath>
            </resource>
            <resource>
                <directory>src/main/jsb-application</directory>
                <targetPath>${org.jsbeans.application.path}</targetPath>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/java</directory>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>src/test/jsb-system</directory>
                <targetPath>${org.jsbeans.system.path}</targetPath>
            </testResource>
            <testResource>
                <directory>src/test/jsb-resource</directory>
                <targetPath>${org.jsbeans.resource.path}</targetPath>
            </testResource>
            <testResource>
                <directory>src/test/jsb-application</directory>
                <targetPath>${org.jsbeans.application.path}</targetPath>
            </testResource>
        </testResources>
        <pluginManagement>
            <plugins>
                <!--plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>1.6</version>
                    <configuration>
                        <verbose>true</verbose>
                        <includes>
                            <includes>**/*.java</includes>
                        </includes>
                    </configuration>
                    <executions>
                        <execution>
                            <id>generate-license-headers</id>
                            <goals>
                                <goal>update-file-header</goal>
                            </goals>
                            <phase>process-sources</phase>
                            <configuration>
                                <licenseName>MIT</licenseName>
                            </configuration>
                        </execution>
                    </executions>
                </plugin-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <skipTests>true</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <compilerArgument>-g</compilerArgument>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Manifest-Version>${org.jsbeans.version}</Manifest-Version>
                            </manifestEntries>
                        </archive>
                        <!--<finalName>${project.groupId}-${project.artifactId}-${project.version}</finalName>-->
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-jar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <includes>
                                    <include>**</include>
                                </includes>
                                <excludes>
                                    <exclude>${org.jsbeans.application.path}/**</exclude>
                                </excludes>
                            </configuration>
                        </execution>
                        <execution>
                            <id>jsb-application-jar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <classifier>jsb-application</classifier>
                                <includes>
                                    <include>${org.jsbeans.application.path}/**</include>
                                </includes>
                            </configuration>
                        </execution>
                        <execution>
                            <id>test-jar</id>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!--plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin-->
            </plugins>
        </pluginManagement>
    </build>
</project>
